--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ p{ justify-content: all;}
 
 
 body{
-    background-image: url("./components/img/nsenene.jpg");
+    background-image: url("./components/img/mpologoma.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
